--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <span class="icon-circle-down" aria-hidden="true"></span>
                             Download App
                         </a>
-                        <a href="http://player.vimeo.com/video/14592941?title=0&amp;byline=0&amp;portrait=0&amp;color=39b54a" data-lity class="button stroke">
+                        <a href="https://www.youtube.com/watch?v=zjrHfRJUGus" data-lity class="button stroke">
                             <span class="icon-play" aria-hidden="true"></span>
                             Watch Video
                         </a>
@@ -101,10 +101,7 @@
 
         <ul class="home-social-list">
             <li>
-                <a href="#"><i class="fa fa-twitter"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa fa-youtube-play"></i></a>
+                <a href="https://www.youtube.com/watch?v=zjrHfRJUGus"><i class="fa fa-youtube-play"></i></a>
             </li>
         </ul>
         <!-- end home-social-list -->
