--- a/index.html
+++ b/index.html
@@ -310,7 +310,7 @@
                     <h4>Contact</h4>
 
                     <p>
-                    ryad.guerroudj@gmail.com <br>
+                    meca.gmbh@gmail.com <br>
                     Phone: (+49) 17672771722 <br>
                     Whatsapp: (+49) 17672771722   
                     </p>                    
