Update youtube chanal

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <span class="icon-circle-down" aria-hidden="true"></span>
                             Download App
                         </a>
-                        <a href="https://www.youtube.com/watch?v=zjrHfRJUGus" data-lity class="button stroke">
+                        <a href="https://www.youtube.com/watch?v=yP34SNld79g" data-lity class="button stroke">
                             <span class="icon-play" aria-hidden="true"></span>
                             Watch Video
                         </a>
@@ -101,7 +101,7 @@
 
         <ul class="home-social-list">
             <li>
-                <a href="https://www.youtube.com/watch?v=zjrHfRJUGus"><i class="fa fa-youtube-play"></i></a>
+                <a href="https://www.youtube.com/watch?v=yP34SNld79g"><i class="fa fa-youtube-play"></i></a>
             </li>
         </ul>
         <!-- end home-social-list -->
