Fix language text

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
 				<li><a class="smoothscroll"  href="#download" title="download">Download</a></li>	
                 
-                <li><button style="background:#0101019f;color:white;" onclick="window.location.href='index.ar.html'">English</button>  </li>
+                <li><button style="background:#0101019f;color:white;" onclick="window.location.href='index.ar.html'">عربي</button>  </li>
 			</ul>
 		</nav>
 
