--- a/index.ar.html
+++ b/index.ar.html
@@ -48,7 +48,9 @@
 
 	   	<nav id="header-nav-wrap">
 			<ul class="header-main-nav">
-                <li><button style="background:#0101019f;color:white;" onclick="window.location.href='index.html'">English</button>  </li>
+                <li>
+                    <a href="index.html"><i class=""></i>english</a>
+                </li>
                 <li class="current"><a class="smoothscroll"  href="#home" title="home">الرئيسية</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">عن</a></li>
 				<li><a class="smoothscroll"  href="#download" title="download">تحميل</a></li>	
