--- a/index.html
+++ b/index.html
@@ -51,8 +51,9 @@
 				<li class="current"><a class="smoothscroll"  href="#home" title="home">Home</a></li>
                 <li><a class="smoothscroll"  href="#about" title="about">About</a></li>
 				<li><a class="smoothscroll"  href="#download" title="download">Download</a></li>	
-                
-                <li><button style="background:#0101019f;color:white;" onclick="window.location.href='index.ar.html'">عربي</button>  </li>
+                <li>
+                    <a href="index.ar.html"><i class=""></i>عربي</a>
+                </li>
 			</ul>
 		</nav>
 
