--- a/index.html
+++ b/index.html
@@ -246,25 +246,25 @@
             <div class="about-how-content" data-aos="fade-up">
                 <div class="about-how-steps block-1-2 block-tab-full group">
 
-                    <div class="bgrid step" data-item="1">
+                    <div class="bgrid step" data-item="">
                         <h3>Holistic Engagement</h3>
                         <p>The combination of reading, listening, interacting, and writing provides users with a holistic and immersive experience with the Quran.
                         </p> 
                     </div>
 
-                    <div class="bgrid step" data-item="2">
+                    <div class="bgrid step" data-item="">
                         <h3>Multisensory Learning</h3>
                         <p>Integrating various modes of engagement (visual, auditory, interactive, and tactile through writing) appeals to different learning styles, making the learning process more effective and enjoyable.
                         </p> 
                     </div>               
                
-                    <div class="bgrid step" data-item="3">
+                    <div class="bgrid step" data-item="">
                         <h3>Personalized Journey</h3>
                         <p>Each action contributes to a personalized and meaningful journey, allowing users to connect with the Quran on a spiritual, intellectual, and emotional level.
                         </p> 
                     </div>
 
-                    <div class="bgrid step" data-item="4">
+                    <div class="bgrid step" data-item="">
                         <h3>Community Connection</h3>
                         <p>Interacting and writing within the app not only enhance individual experiences but also contribute to a communal understanding, as users share insights and engage in discussions.
                         </p> 
@@ -327,8 +327,8 @@
                     <ul class="list-links">
                         <li><a href="#">Home</a></li>
                         <li><a href="#">About Us</a></li>
-                        <li><a href="https://www.termsfeed.com/live/0f55d140-3804-4085-bef6-da4925ef550b">Terms</a></li>
-                        <li><a href="https://www.termsfeed.com/live/fd7c3393-6a9e-43d8-8da1-5b3658640d0a">Privacy Policy</a></li>
+                        <li><a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms of Use</a></li>
+                        <li><a href="policy.html">Privacy Policy</a></li>
                     </ul>	      		
                             
                 </div> <!-- end footer-site-links --> 
