--- a/policy.html
+++ b/policy.html
@@ -37,9 +37,25 @@
 
 <p>MECA does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our App, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.</p>
 
-<h2>Online Privacy Policy Only</h2>
+<h2>Payments</h2>
 
-<p>This Privacy Policy applies only to our online activities and is valid for visitors to our App with regards to the information that they shared and/or collect in MECA. This policy is not applicable to any information collected offline or via channels other than this app. Our Privacy Policy was created with the help of the <a href="https://www.app-privacy-policy.com/app-privacy-policy-generator/">App Privacy Policy Generator from App-Privacy-Policy.com</a></p>
+<p>We may provide paid products and/or services within the Service. In that case, we use third-party services for payment processing (e.g. payment processors).</p>
+<p>We will not store or collect your payment card details. That information is provided directly to our third-party payment processors whose use of your personal information is governed by their Privacy Policy. These payment processors adhere to the standards set by PCI-DSS as managed by the PCI Security Standards Council, which is a joint effort of brands like Visa, MasterCard, American Express and Discover. PCI-DSS requirements help ensure the secure handling of payment information.</p>
+<p>The payment processors we work with are: </p>
+
+<ul>
+    <li>
+        <p>Apple Store In-App Payments</p>
+        <p><a href="https://www.apple.com/legal/privacy/en-ww/">Their Privacy Policy can be viewed at https://www.apple.com/legal/privacy/en-ww/</a></p>
+    </li>
+</ul>
+
+<ul>
+    <li>
+        <p>Apple Store Subscriptions</p>
+        <p><a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms of Use https://www.apple.com/legal/internet-services/itunes/dev/stdeula/</a></p>
+    </li>
+</ul>
 
 <h2>Consent</h2>
 
