--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
                         As we embrace this bilingual journey, we'd love to hear your thoughts! Share your feedback within the app, and let us know how this update enhances your experience.  
                     </p>   
                     
-                    <p> Thank you for being a vital part of the Mecca family. Together, let's continue to build bridges of understanding and unity.</p>
+                    <p> Thank you for being a vital part of the Meca family. Together, let's continue to build bridges of understanding and unity.</p>
 
                 </div> <!-- end footer-contact -->  
 
