--- a/policy.html
+++ b/policy.html
@@ -43,7 +43,14 @@
 
 <ul>
     <li>
-        <p>Apple Store Subscriptions</p>
+        <p>Apple Store Subscriptions:  
+            Elevate your experience with our flexible subscription plans. Choose the option that suits you best and enjoy full access.
+            Monthly subscriptions can be canceled at any time.
+            Yearly subscriptions include a 2-week free trial; cancel within the trial period to avoid charges.
+            Subscriptions automatically renew unless auto-renew is turned off at least 24 hours before the end of the current period.
+            Account will be charged for renewal within 24 hours prior to the end of the current period, at the same price as the original subscription.
+            Subscriptions can be managed and auto-renewal turned off by going to your Account Settings after purchase.
+            Payment will be charged to your Apple ID account upon confirmation of purchase.</p>
         <p><a href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/">Terms of Use https://www.apple.com/legal/internet-services/itunes/dev/stdeula/</a></p>
     </li>
 </ul>
