Add AppStore link

--- a/index.ar.html
+++ b/index.ar.html
@@ -305,7 +305,7 @@
                 </p>
 
                 <ul class="download-badges">
-                    <li><a href="https://testflight.apple.com/join/v5uY4KVN" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li>
+                    <li><a href="https://apps.apple.com/de/app/meca/id6470744004?l=en-GB" title="" class="badge-appstore"  data-aos="fade-up">App Store</a></li>
                 </ul>
 
             </div>
